[web] [fix] dot alignment
Summary: dot wasn't aligned with color splotch

Test Plan: send a new message, un read dot should be aligned

Reviewers: atul

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga, yayabosh

Differential Revision: https://phabricator.ashoat.com/D3723

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -108,6 +108,10 @@ div.colorSplotch {
   width: 42px;
   border-radius: 1.68px;
 }
+div.colorSplotchContainer {
+  height: 42px;
+  display: flex;
+}
 div.lastActivity {
   font-size: var(--xxs-font-10);
   color: var(--fg);
